--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -12,15 +12,16 @@ dependencies {
   testCompile 'junit:junit:+'
 }
 
+/* [ UNIT TESTING ] ================================================================================================= */
+
 test {
+  /* Print tests results to the output */
   testLogging {
     events "passed", "skipped", "failed", "standardOut", "standardError"
   }
 }
 
-import javax.xml.XMLConstants
-import javax.xml.transform.stream.StreamSource
-import javax.xml.validation.SchemaFactory
+/* [ VALIDATIONS ] ================================================================================================== */
 
 def fileToUrl(def filePath) {
   return new File(filePath).toURI().toURL();
@@ -32,25 +33,24 @@ def validateXml(def xmlUrl, def xsdUrl) {
 
   new URL("${xsdUrl}").withInputStream { xsd ->
     new URL("${xmlUrl}").withInputStream { xml ->
-      SchemaFactory.newInstance(XMLConstants.W3C_XML_SCHEMA_NS_URI)
-          .newSchema(new StreamSource(xsd))
+      javax.xml.validation.SchemaFactory.newInstance(javax.xml.XMLConstants.W3C_XML_SCHEMA_NS_URI)
+          .newSchema(new javax.xml.transform.stream.StreamSource(xsd))
           .newValidator()
-          .validate(new StreamSource(xml))
+          .validate(new javax.xml.transform.stream.StreamSource(xml))
     }
   }
 }
 
+/** Validate persistence.xml file against standard (XSD schema). */
 task checkPersistenceXml {
   group 'verification'
   description 'Check persistence.xml file against the validation schema.'
 
-  def pathXml = "${project.projectDir}/src/main/resources/META-INF/persistence.xml"
-  def pathXsd = "${rootProject.projectDir}/gradle/schemas/persistence_2_0.xsd"
-
-  def xmlUrl = fileToUrl(pathXml)
-  def xsdUrl = fileToUrl(pathXsd)
+  def xmlUrl = fileToUrl("${project.projectDir}/src/main/resources/META-INF/persistence.xml")
+  def xsdUrl = fileToUrl("${rootProject.projectDir}/gradle/schemas/persistence_2_0.xsd")
 
   validateXml(xmlUrl, xsdUrl)
 }
 
+/* Check task should include XML validation as a dependency. */
 check.dependsOn checkPersistenceXml
