--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,17 @@
+#
+# give more memory
+#
 org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=1024m
+#
+# keep the daemon running
+#
 org.gradle.daemon=true
+#
+# execute tasks in parallel
+#
 org.gradle.parallel=true
 org.gradle.parallel.threads=5
-org.gradle.configureondemand=true
+#
+# do reconfiguration only if user specifically set that
+#
+org.gradle.configureondemand=false
