--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -15,18 +15,20 @@ configurations {
 }
 
 dependencies {
-  compile 'org.slf4j:slf4j-api:+'
-//  compile 'org.slf4j:slf4j-nop:+'
+  /* SLF4J + Logback + log4j-over-slf4j */
+  compile 'org.slf4j:slf4j-api:+',
+      'org.slf4j:log4j-over-slf4j:+'
   compile 'ch.qos.logback:logback-classic:+'
+
   compile 'javax:javaee-api:+'
+
+  /* [ TESTING ] ==================================================================================================== */
 
   /* SQLite */
   testCompile 'org.xerial:sqlite-jdbc:+'
   /* Hibernate */
   testCompile 'org.hibernate:hibernate-core:+',
       'org.hibernate:hibernate-entitymanager:+'
-  /* SQL Dialect */
-  testCompile 'net.kemitix:sqlite-dialect:+'
 
   testCompile 'junit:junit:+'
   testCompile 'org.hamcrest:hamcrest-integration:+',
