ADD: entities test ADD: persistence.xml classes registration test FIX: default constructors for entities ADD: reflections lib for easier testing ADD: assertj lib for human readable tests

--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -35,6 +35,10 @@ dependencies {
       'org.hamcrest:hamcrest-core:+',
       'org.hamcrest:hamcrest-library:+'
   testCompile 'org.mockito:mockito-core:+'
+  testCompile 'org.assertj:assertj-core:+'
+  testCompile 'org.reflections:reflections:+'
+//  testCompile 'org.easytesting:fest-reflect:+',
+//      'org.easytesting:fest-assert:+'
 }
 
 /* [ UNIT TESTING ] ================================================================================================= */
