--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,10 @@ org.gradle.parallel.threads=5
 # do reconfiguration only if user specifically set that
 #
 org.gradle.configureondemand=false
+
+
+#
+# Versions
+#
+SOLUTION_VERSION_MAJOR=1.0
+SOLUTION_VERSION_MINOR=0
