--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'java'
 // we will use lambda
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+archivesBaseName = "lib-core-${APP_VERSION}"
+
 compileJava.options.encoding = 'UTF-8'
 
 repositories {
@@ -39,6 +41,15 @@ dependencies {
   testCompile 'org.reflections:reflections:+'
 //  testCompile 'org.easytesting:fest-reflect:+',
 //      'org.easytesting:fest-assert:+'
+}
+
+jar {
+  manifest {
+    attributes("Implementation-Title" : "Core",
+               "Implementation-Version" : "${APP_VERSION}" )
+  }
+  
+  exclude('**/.placeholder')
 }
 
 /* [ UNIT TESTING ] ================================================================================================= */
