CHG: improved logging

--- a/gradle.properties
+++ b/gradle.properties
@@ -14,9 +14,7 @@ org.gradle.parallel.threads=5
 #
 # do reconfiguration only if user specifically set that
 #
-org.gradle.configureondemand=false
-
-
+org.gradle.configureondemand=true
 #
 # Versions
 #
