--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -57,7 +57,14 @@ jar {
 test {
   /* Print tests results to the output */
   testLogging {
-    events "passed", "skipped", "failed", "standardOut", "standardError"
+    // set options for log level LIFECYCLE
+    events "failed", "passed"
+
+    // set options for log level DEBUG
+    debug.events "failed", "passed", "skipped", "standardError", "standardOut", "started"
+
+    // set options for log level INFO
+    info.events = ["failed", "passed", "skipped"]
   }
 }
 
