--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -7,10 +7,6 @@ archivesBaseName = "lib-core-${APP_VERSION}"
 
 compileJava.options.encoding = 'UTF-8'
 
-repositories {
-  maven { url "http://m2.objectdb.com" }
-}
-
 configurations {
   /* Exclude 'nop' implementation from dependencies. We will use logback. */
   all*.exclude group: 'org.slf4j', module: 'slf4j-nop'
@@ -21,7 +17,7 @@ dependencies {
   compile 'org.slf4j:slf4j-api:+',
       'org.slf4j:log4j-over-slf4j:+'
   compile 'ch.qos.logback:logback-classic:+'
-
+  /* JPA */
   compile 'javax:javaee-api:+'
 
   /* [ TESTING ] ==================================================================================================== */
@@ -39,8 +35,7 @@ dependencies {
   testCompile 'org.mockito:mockito-core:+'
   testCompile 'org.assertj:assertj-core:+'
   testCompile 'org.reflections:reflections:+'
-//  testCompile 'org.easytesting:fest-reflect:+',
-//      'org.easytesting:fest-assert:+'
+  testCompile 'org.ocpsoft.prettytime:prettytime:+'
 }
 
 jar {
@@ -49,6 +44,7 @@ jar {
         "Implementation-Version": "${APP_VERSION}")
   }
 
+  /* Remove GIT empty folder .placeholder files from final binary. */
   exclude('**/.placeholder')
 }
 
