ADD: RESTfull skeleton

--- a/war-tasks/src/main/webapp/WEB-INF/web.xml
+++ b/war-tasks/src/main/webapp/WEB-INF/web.xml
@@ -1,59 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app
-        version="3.0"
-        xmlns="http://java.sun.com/xml/ns/javaee"
-        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    version="3.0"
+    xmlns="http://java.sun.com/xml/ns/javaee"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+  <!--
+      References:
+          https://docs.oracle.com/cd/E24329_01/web.1211/e21049/web_xml.htm#WBAPP504
+  -->
+
+  <session-config>
+    <session-timeout>30</session-timeout>
+    <cookie-config>
+      <path>/</path>
+    </cookie-config>
+  </session-config>
+
+  <filter>
+    <filter-name>PagesFilter</filter-name>
+    <filter-class>com.tiro.PagesFilter</filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>PagesFilter</filter-name>
+    <url-pattern>/*</url-pattern>
     <!--
-        References:
-            https://docs.oracle.com/cd/E24329_01/web.1211/e21049/web_xml.htm#WBAPP504
+        The dispatcher has five legal values: FORWARD, REQUEST, INCLUDE, ASYNC, and ERROR.
+
+        A value of FORWARD means the Filter will be applied under RequestDispatcher.forward() calls.
+        A value of REQUEST means the Filter will be applied under ordinary client calls to the path or servlet.
+        A value of INCLUDE means the Filter will be applied under RequestDispatcher.include() calls.
+        A value of ASYNC means the Filter will be applied under calls dispatched from an AsyncContext.
+        A value of ERROR means the Filter will be applied under the error page mechanism.
+
+        The absence of any dispatcher elements in a filter-mapping indicates a default of applying filters only
+        under ordinary client calls to the path or servlet.
     -->
+    <dispatcher>REQUEST</dispatcher>
+    <dispatcher>FORWARD</dispatcher>
+    <dispatcher>INCLUDE</dispatcher>
+    <dispatcher>ASYNC</dispatcher>
+    <dispatcher>ERROR</dispatcher>
+  </filter-mapping>
 
-    <session-config>
-        <session-timeout>30</session-timeout>
-        <cookie-config>
-            <path>/</path>
-        </cookie-config>
-    </session-config>
+  <error-page>
+    <error-code>404</error-code>
+    <location>/WEB-INF/pages/errors/404.jsp</location>
+  </error-page>
 
-    <filter>
-        <filter-name>PagesFilter</filter-name>
-        <filter-class>com.tiro.PagesFilter</filter-class>
-    </filter>
+  <jsp-config>
+    <jsp-property-group>
+      <url-pattern>*.jsp</url-pattern>
+      <trim-directive-whitespaces>true</trim-directive-whitespaces>
+    </jsp-property-group>
+  </jsp-config>
 
-    <filter-mapping>
-        <filter-name>PagesFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-        <!--
-            The dispatcher has five legal values: FORWARD, REQUEST, INCLUDE, ASYNC, and ERROR.
+  <servlet>
+    <servlet-name>rest-api</servlet-name>
+    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    <init-param>
+      <param-name>com.sun.jersey.config.property.packages</param-name>
+      <param-value>com.tiro</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
 
-            A value of FORWARD means the Filter will be applied under RequestDispatcher.forward() calls.
-            A value of REQUEST means the Filter will be applied under ordinary client calls to the path or servlet.
-            A value of INCLUDE means the Filter will be applied under RequestDispatcher.include() calls.
-            A value of ASYNC means the Filter will be applied under calls dispatched from an AsyncContext.
-            A value of ERROR means the Filter will be applied under the error page mechanism.
-
-            The absence of any dispatcher elements in a filter-mapping indicates a default of applying filters only
-            under ordinary client calls to the path or servlet.
-        -->
-        <dispatcher>REQUEST</dispatcher>
-        <dispatcher>FORWARD</dispatcher>
-        <dispatcher>INCLUDE</dispatcher>
-        <dispatcher>ASYNC</dispatcher>
-        <dispatcher>ERROR</dispatcher>
-    </filter-mapping>
-
-    <!-- -->
-    <error-page>
-        <error-code>404</error-code>
-        <location>/WEB-INF/pages/errors/404.jsp</location>
-    </error-page>
-    <!-- -->
-
-    <jsp-config>
-        <jsp-property-group>
-            <url-pattern>*.jsp</url-pattern>
-            <trim-directive-whitespaces>true</trim-directive-whitespaces>
-        </jsp-property-group>
-    </jsp-config>
+  <servlet-mapping>
+    <servlet-name>rest-api</servlet-name>
+    <url-pattern>/api/*</url-pattern>
+  </servlet-mapping>
 </web-app>
