--- a/war-time/build.gradle
+++ b/war-time/build.gradle
@@ -1,39 +1,44 @@
 buildscript {
-    repositories {
-        jcenter()
-    }
+  repositories {
+    jcenter()
+  }
 
-    dependencies {
-        classpath 'org.akhikhl.gretty:gretty:+'
-    }
+  dependencies {
+    classpath 'org.akhikhl.gretty:gretty:+'
+  }
 }
 
 apply plugin: 'war'
 apply plugin: 'org.akhikhl.gretty'
+apply plugin: 'jacoco'
 
 // we will use lambda
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 compileJava.options.encoding = 'UTF-8'
 
+jacoco {
+  toolVersion = '+'
+}
+
 war {
-    jar.enabled = false
+  jar.enabled = false
 }
 
 dependencies {
   compile project(":lib-core")
-  
+
   // compile 'joda-time:joda-time:+'
 
   // providedCompile 'joda-time:joda-time:+'
 }
 
 test {
-    testLogging {
-        events "passed", "skipped", "failed", "standardOut", "standardError"
-    }
+  testLogging {
+    events "passed", "skipped", "failed", "standardOut", "standardError"
+  }
 }
 
 gretty {
-    contextPath = '/time'
+  contextPath = '/time'
 }
