--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -13,9 +13,10 @@ configurations {
 }
 
 dependencies {
-  /* SLF4J + Logback + log4j-over-slf4j */
+  /* SLF4J + Logback + log4j-over-slf4j + jul-to-slf4j */
   compile 'org.slf4j:slf4j-api:+',
-      'org.slf4j:log4j-over-slf4j:+'
+      'org.slf4j:log4j-over-slf4j:+',
+      'org.slf4j:jul-to-slf4j:+'
   compile 'ch.qos.logback:logback-classic:+'
   /* JPA */
   compile 'javax:javaee-api:+'
