--- a/war-tasks/build.gradle
+++ b/war-tasks/build.gradle
@@ -23,9 +23,10 @@ war {
 dependencies {
   compile project(":lib-core")
 
-  compile 'com.sun.jersey:jersey-core:+'
-  compile 'com.sun.jersey:jersey-server:+'
-  compile 'com.sun.jersey:jersey-servlet:+'
+  /* Java RX implementation */
+  compile 'com.sun.jersey:jersey-core:+',
+      'com.sun.jersey:jersey-server:+',
+      'com.sun.jersey:jersey-servlet:+'
 
   // compile 'joda-time:joda-time:+'
 
