--- a/war-time/build.gradle
+++ b/war-time/build.gradle
@@ -28,6 +28,11 @@ war {
 dependencies {
   compile project(":lib-core")
 
+  /* Java RX implementation */
+  compile 'com.sun.jersey:jersey-core:+',
+      'com.sun.jersey:jersey-server:+',
+      'com.sun.jersey:jersey-servlet:+'
+
   // compile 'joda-time:joda-time:+'
 
   // providedCompile 'joda-time:joda-time:+'
