--- a/gradle.properties
+++ b/gradle.properties
@@ -16,7 +16,14 @@ org.gradle.parallel.threads=5
 #
 org.gradle.configureondemand=true
 #
-# Versions
+# Solution Variables
+#
+## Allow TEST configurations in solution
+USE_TDD=false
+## Allow code coverage tool usage in Tests
+USE_JACOCO=true
+#
+# Solution Version
 #
 SOLUTION_VERSION_MAJOR=1.0
 SOLUTION_VERSION_MINOR=0
