--- a/gradle.properties
+++ b/gradle.properties
@@ -19,7 +19,7 @@ org.gradle.configureondemand=true
 # Solution Variables
 #
 ## Allow TEST configurations in solution
-USE_TDD=false
+USE_TDD=true
 ## Allow code coverage tool usage in Tests
 USE_JACOCO=true
 #
