ADD: rest api unit test start point CHG: REST services got Services interface with constants used for API mapping

--- a/build.gradle
+++ b/build.gradle
@@ -74,7 +74,7 @@ task clean(type: Delete) {
   delete rootProject.buildDir
 }
 
-/* */
+/* BUILD TASKS EXECUTION TIME TRACKING */
 buildtimetracker {
   reporters {
     csv {
