--- a/war-time/build.gradle
+++ b/war-time/build.gradle
@@ -32,9 +32,7 @@ dependencies {
   compile project(":lib-core")
 
   /* Java RX implementation */
-  compile 'com.sun.jersey:jersey-core:+',
-      'com.sun.jersey:jersey-server:+',
-      'com.sun.jersey:jersey-servlet:+'
+  compile 'com.sun.jersey:jersey-servlet:+'
 
   // compile 'joda-time:joda-time:+'
 
