FIX: grizzly2 logs to SLF4J bridge set

--- a/lib-core/build.gradle
+++ b/lib-core/build.gradle
@@ -20,6 +20,7 @@ dependencies {
   /* SLF4J + Logback + log4j-over-slf4j + jul-to-slf4j */
   compile 'org.slf4j:slf4j-api:+',
       'org.slf4j:log4j-over-slf4j:+',
+      'org.slf4j:jcl-over-slf4j:+',
       'org.slf4j:jul-to-slf4j:+'
 
   /* Logback */
