FIX: enabled tracing for Jersey v2

--- a/war-api/src/test/webapp/WEB-INF/web.xml
+++ b/war-api/src/test/webapp/WEB-INF/web.xml
@@ -18,22 +18,18 @@
 
   <servlet>
     <servlet-name>rest-api</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
-      <param-name>com.sun.jersey.config.property.packages</param-name>
+      <param-name>jersey.config.server.provider.packages</param-name>
       <param-value>com.tiro.rest</param-value>
     </init-param>
     <init-param>
-      <param-name>com.sun.jersey.spi.container.ContainerRequestFilters</param-name>
-      <param-value>com.sun.jersey.api.container.filter.LoggingFilter</param-value>
+      <param-name>jersey.config.server.provider.classnames</param-name>
+      <param-value>org.glassfish.jersey.filter.LoggingFilter</param-value>
     </init-param>
     <init-param>
-      <param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
-      <param-value>com.sun.jersey.api.container.filter.LoggingFilter</param-value>
-    </init-param>
-    <init-param>
-      <param-name>com.sun.jersey.config.feature.Trace</param-name>
-      <param-value>true</param-value>
+      <param-name>jersey.config.server.tracing.type</param-name>
+      <param-value>ALL</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
