--- a/war-api/src/main/webapp/WEB-INF/web.xml
+++ b/war-api/src/main/webapp/WEB-INF/web.xml
@@ -21,9 +21,9 @@
   -->
   <servlet>
     <servlet-name>rest-api</servlet-name>
-    <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
-      <param-name>com.sun.jersey.config.property.packages</param-name>
+      <param-name>jersey.config.server.provider.packages</param-name>
       <param-value>com.tiro.rest</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
